# email-classifier

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.inference.txt  requirements.txt
config/: labels.json
docs/: HANDOVER_AUTO_DRAFT.md
examples/: sample_emails.jsonl
models/: sklearn_classifier_metrics.json
src/email_classifier/: api.py  cluster_similar.py  download_embedding_model.py  expand_group_labels.py  extract_sender_blacklist.py  gmail_export.py  gmail_export_all.py  labels.py  openai_label.py  prepare_fasttext.py  review_ui.py  rules.py  semantic.py  sklearn_classifier.py  text.py  train.py  train_semantic.py  train_sklearn.py
